--- a/demo1.css
+++ b/demo1.css
@@ -196,7 +196,7 @@ li{
 .box {
     width: 608px;
     height: 240px;
-    background: url(image/地上半包式-哈尔滨松北转运站.png) no-repeat center;
+    background: url(images/地上半包式-哈尔滨松北转运站.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:1350px;
@@ -256,7 +256,7 @@ li{
 .box2 {
     width: 608px;
     height: 240px;
-    background: url(image/地上半包式-常德刘家湾转运站.png) no-repeat center;
+    background: url(images/地上半包式-常德刘家湾转运站.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:1350px;
@@ -411,7 +411,7 @@ li{
 .box3 {
     width: 608px;
     height: 240px;
-    background: url(image/全下沉式1.png) no-repeat center;
+    background: url(images/全下沉式1.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:2510px;
@@ -471,7 +471,7 @@ li{
 .box4 {
     width: 608px;
     height: 240px;
-    background: url(image/全下沉式2.png) no-repeat center;
+    background: url(images/全下沉式2.png) no-repeat center;
     background-size: cover;
     position: absolute;
     top:2510px;
